force-app/main/default/objects/Expense__c/fields/Expense_Report__c.field-meta.xml
<CustomField>
    <fullName>Expense_Report__c</fullName>
    <formula>Category__r.Expense_Report__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Report</label>
    <type>Text</type>
</CustomField>