force-app/main/default/objects/Expense__c/fields/Fixed_Bill_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Bill_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed Bill Paid</label>
    <type>Checkbox</type>
</CustomField>