force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Datetime__c</columns>
    <columns>Category__c</columns>
    <columns>Expense_Report__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>